--- a/FoodDeliveryTime.Rmd
+++ b/FoodDeliveryTime.Rmd
@@ -25,30 +25,139 @@ train_data <- read_excel("./dataset/Data_Train.xlsx")
 test_data <- read_excel("./dataset/Data_Test.xlsx")
 head(train_data)
 ```
+
+# Preprocess Data
 ```{r}
 str(train_data)
 ```
+## Location
+Find the unique location:
 ```{r}
-#unique(train_data$Location)
-train_data$Location <- word(train_data$Location, -1, sep=",") %>% trimws() #%>% 
-train_data$Location[train_data$Location %in% c("Mumbai", "Mumbai CST Area" , "Mumbai Central")] <- "Mumbai"
-train_data$Location[train_data$Location %in% c("Bangalore", "Electronic City", "Marathalli", "Whitefield")] <- "Bangalore"
-train_data$Location[train_data$Location %in% c("India Gate", "Delhi", "Delhi University-GTB Nagar", "Delhi Cantt." , "Timarpur", "Noida")] <- "Delhi"
-train_data$Location[train_data$Location %in% c("Gurgoan", "Gurgaon")] <- "Gurgaon"
-train_data$Location[train_data$Location %in% c("Maharashtra", "Pune", "Pune University")] <- "Maharashtra"
-train_data$Location[train_data$Location %in% c("Hyderabad", "Begumpet", "Majestic")] <- "Hyderabad"
+unique(train_data$Location)
+```
+From the result above, we will generalized the location by the city (the words after last comma).
+- "Mumbai", "Mumbai CST Area" , "Mumbai Central" -> "Mumbai"
+- "Bangalore", "Electronic City", "Marathalli", "Whitefield" -> "Bangalore"
+- "India Gate", "Delhi", "Delhi University-GTB Nagar", "Delhi Cantt." , "Timarpur", "Noida" -> "Delhi"
+- "Gurgoan", "Gurgaon" -> "Gurgaon"
+- "Kolkata" -> "Kolkata"
+- "Maharashtra", "Pune", "Pune University" -> "Maharashtra"
+- "Hyderabad", "Begumpet", "Majestic" -> "Hyderabad"
+```{r}
+#train_data$Location <- word(train_data$Location, -1, sep=",") %>% trimws() #%>% 
+#train_data$Location[train_data$Location %in% c("Mumbai", "Mumbai CST Area" , "Mumbai Central")] <- "Mumbai"
+#train_data$Location[train_data$Location %in% c("Bangalore", "Electronic City", "Marathalli", "Whitefield")] <- "Bangalore"
+#train_data$Location[train_data$Location %in% c("India Gate", "Delhi", "Delhi University-GTB Nagar", "Delhi Cantt." , "Timarpur", "Noida")] <- "Delhi"
+#train_data$Location[train_data$Location %in% c("Gurgoan", "Gurgaon")] <- "Gurgaon"
+#train_data$Location[train_data$Location %in% c("Maharashtra", "Pune", "Pune University")] <- "Maharashtra"
+#train_data$Location[train_data$Location %in% c("Hyderabad", "Begumpet", "Majestic")] <- "Hyderabad"
 ```
 
+After that, we change the type of Location into factor
 ```{r}
-train_data <- train_data %>% 
-  mutate(Location = as.factor(Location))
+#train_data <- train_data %>% 
+#  mutate(Location = as.factor(Location))
 str(train_data)
 ```
 
-
+## Cuisines
+```{r}
+unique(train_data$Cuisines)[1:10]
+```
+From result above, one delivery order can contained some types of cuisines. We will doing One-Hot Encoding for every cuisines type.
 ```{r}
 library(splitstackshape)
 splitstackshape:::charMat(strsplit(train_data$Cuisines, ", "), fill = 0L)
+```
+## Average Cost
+```{r}
+unique(train_data$Average_Cost)
+```
+We will remove the string `\u20b9` and ',' in every data then change it to numeric type.
+```{r}
+library(stringr)
+gsub('[\u20b9]|,', '', train_data$Average_Cost) %>% as.numeric() %>% 
+  unique()
+```
+## Minumum Order
+```{r}
+unique(train_data$Minimum_Order)
+```
+We will preprocess the minimum order with the method as same as the average cost
+```{r}
+gsub('[\u20b9]|,', '', train_data$Minimum_Order) %>% as.numeric() %>% 
+  unique()
+```
+## Rating
+```{r}
+unique(train_data$Rating)
+```
+We will convert as numeric. If the Rating is `NEW`, `Opening Soon`, `Temporarily Closed`, or `-` we will change to NA.
+```{r}
+train_data$Rating %>% as.numeric() %>% unique()
+```
+## Votes
+```{r}
+unique(train_data$Votes)
+```
+We will convert as numeric.
+```{r}
+train_data$Votes %>% as.numeric %>% unique()
+```
+## Reviews
+```{r}
+unique(train_data$Reviews)
+```
+We will convert as numeric.
+```{r}
+train_data$Reviews %>% as.numeric %>% unique()
+```
+## Delivery Times
+```{r}
+unique(train_data$Delivery_Time)
+```
+We will remove the " minutes" then convert it to numeric
+```{r}
+gsub('[ minutes]', '', train_data$Delivery_Time) %>%  as.numeric() %>% unique()
+```
+# Pipeline using tidymodels
+```{r}
+transform_location <- function(Location){
+  if(Location %in% c("Mumbai", "Mumbai CST Area" , "Mumbai Central")){
+    return ("Mumbai")
+  } else if(Location %in% c("Bangalore", "Electronic City", "Marathalli", "Whitefield")){
+    return("Bangalore")
+  } else if(Location %in% c("India Gate", "Delhi", "Delhi University-GTB Nagar", "Delhi Cantt." , "Timarpur", "Noida")){
+    return("Delhi")
+  } else if(Location %in% c("Gurgoan", "Gurgaon")){
+    return("Gurgaon")
+  } else if(Location %in% c("Maharashtra", "Pune", "Pune University")){
+    return("Maharashtra")
+  } else if(Location %in% c("Hyderabad", "Begumpet", "Majestic")){
+    return("Hyderabad")
+  } else if(Location %in% c("Kolkata")){
+    return("Kolkata")
+  }
+}
+rec <- recipe(Delivery_Time~., data = train_data) %>% 
+  step_select(-Restaurant) %>% 
+  step_mutate(
+    Location =  word(Location, -1, sep=",") %>% trimws() %>% sapply(function(x) transform_location(x)),
+    Average_Cost = gsub('[\u20b9]|,', '', Average_Cost) %>% as.numeric(),
+    Minimum_Order = gsub('[\u20b9]|,', '', Minimum_Order) %>% as.numeric(),
+    Rating = as.character(Rating) %>% as.numeric(),
+    Votes = as.character(Votes) %>% as.numeric(),
+    Reviews = as.character(Reviews) %>% as.numeric(),
+    Delivery_Time = gsub('[ minutes]', '', train_data$Delivery_Time) %>%  as.numeric()
+  ) %>% 
+  step_dummy_extract(Cuisines, sep= ", ") %>%
+  
+  prep()
+```
+
+```{r}
+data_train <- juice(rec)
+head(data_train)
 ```
 
 ```{r}
@@ -58,7 +167,7 @@ clean_data <- train_data %>%
                 Location = as.factor(Location),
                 Average_Cost = gsub('[\u20b9]|,', '', Average_Cost) %>% 
                   as.numeric(),
-                Minimum_Order = gsub('[\u20b9]|,', '', Average_Cost) %>% 
+                Minimum_Order = gsub('[\u20b9]|,', '', Minimum_Order) %>% 
                   as.numeric(),
                 #Rating = replace(Rating, (Rating =="-" |Rating == "NEW"), "0") %>% as.numeric(Rating),
                 #Votes = replace(Votes, Votes == "-", "0") %>% as.numeric(Votes),
@@ -111,31 +220,3 @@ summary(model1)
 ```{r}
 hist(clean_data$Delivery_Time)
 ```
-
-```{r}
-clean_data[idx,]
-```
-
-```{r}
-train_data[idx,]
-```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
