--- a/FoodDeliveryTime.Rmd
+++ b/FoodDeliveryTime.Rmd
@@ -19,6 +19,9 @@ knitr::opts_chunk$set(echo = TRUE,
 # Introduction
 
 # Objective
+- Determine the factor that impact the food delivery time
+
+- Create model for predict/estimate the food delivery time
 
 # Import Library
 ```{r}
@@ -118,7 +121,7 @@ transform_location <- function(Location){
 }
 
 # Preprocess Pipeline
-rec <- recipe(Delivery_Time~., data = training(splitted)) %>% 
+rec_regression <- recipe(Delivery_Time~., data = training(splitted)) %>% 
   step_select(-Restaurant) %>% 
   step_mutate(
     Location =  word(Location, -1, sep=",") %>% trimws() %>% sapply(function(x) transform_location(x)),
@@ -127,44 +130,66 @@ rec <- recipe(Delivery_Time~., data = training(splitted)) %>%
     Rating = as.character(Rating) %>% as.numeric(),
     Votes = as.character(Votes) %>% as.numeric(),
     Reviews = as.character(Reviews) %>% as.numeric(),
-    Delivery_Time = gsub('[ minutes]', '', Delivery_Time) %>%  as.factor()
+    Delivery_Time = gsub('[ minutes]', '', Delivery_Time) %>%  as.numeric()
   ) %>% 
   step_dummy_extract(Cuisines, sep= ", ") %>%
   step_naomit(everything()) %>% 
+  prep()
+
+rec_classification <- rec_regression %>% 
+  step_mutate(Delivery_Time = as.factor(Delivery_Time)) %>% 
   prep()
 ```
 
 Create training and validation data
 ```{r}
-data_train <- juice(rec)
-head(data_train)
+data_train_reg <- juice(rec_regression)
+data_train_cla <- juice(rec_classification)
+head(data_train_cla)
 ```
+
 ```{r}
-data_validation <- bake(rec, testing(splitted))
-head(data_validation)
+data_validation_reg <- bake(rec_regression, testing(splitted))
+data_validation_cla <- bake(rec_classification, testing(splitted))
+head(data_validation_reg)
 ```
 
 Check if there is any `NA` value.
 ```{r}
-any(is.na(data_train))
-any(is.na(data_validation))
+any(is.na(data_train_reg))
+any(is.na(data_train_cla))
+any(is.na(data_validation_reg))
+any(is.na(data_validation_cla))
 ```
+# EDA
+## Time Distribution over Different Location
+```{r}
+boxplot(Delivery_Time ~ Location, data = data_train_reg)
+```
+```{r}
+xtabs(~Location+Delivery_Time, data = data_train_reg)
+```
+## Time Distribution over Rating
+```{r}
+xtabs(~Rating+Delivery_Time, data = data_train_reg)
+```
+
 # Modeling
 ## Regression Linear Model
 ```{r}
-#reg_model <- linear_reg(mode = "regression",
-#                        engine = "lm") %>% 
-#              fit(formula=Delivery_Time ~ Location + Average_Cost + Minimum_Order + #Rating + Votes + Reviews,
-#                  data=data_train)
-#reg_model
+reg_model <- linear_reg(mode = "regression",
+                       engine = "lm") %>%
+             fit(formula=Delivery_Time ~ Location + Average_Cost + Minimum_Order + Rating + Votes + Reviews,
+                 data=data_train_reg)
+summary(reg_model$fit)
 ```
 ```{r}
-# result <- data_validation %>% 
-#   select(Delivery_Time) %>% 
-#   bind_cols(predict(reg_model, new_data = data_validation))
-# 
+result <- data_validation_reg %>%
+  select(Delivery_Time) %>%
+  bind_cols(predict(reg_model, new_data = data_validation_reg))
+ 
 library(MLmetrics)
-# MAPE(result$Delivery_Time, result$.pred)
+MAPE(result$Delivery_Time, result$.pred)
 ```
 
 ## Multinomial Classification
@@ -173,13 +198,13 @@ library(nnet)
 multi_model <- multinom_reg(mode = "classification",
                             engine = "nnet") %>% 
                 fit(formula=Delivery_Time ~ .,
-                  data=data_train, size = 10, maxit=100)
+                  data=data_train_cla, size = 10, maxit=100)
 ```
 
 ```{r}
-data_validation %>% 
+data_validation_cla %>% 
   select(Delivery_Time) %>% 
-  bind_cols(predict(multi_model, new_data=data_validation)) %>% 
+  bind_cols(predict(multi_model, new_data=data_validation_cla)) %>% 
   accuracy(truth = Delivery_Time, .pred_class)
 ```
 ## Random Forest
@@ -189,13 +214,13 @@ rf_model <- rand_forest(mode = "classification",
                         engine = "ranger",
                         mtry = 10, 
                         trees = 1000) %>% 
-            fit(Delivery_Time ~ ., data = data_train)
+            fit(Delivery_Time ~ ., data = data_train_cla)
 ```
 
 ```{r}
-data_validation %>% 
+data_validation_cla %>% 
   select(Delivery_Time) %>% 
-  bind_cols(predict(rf_model, new_data=data_validation)) %>% 
+  bind_cols(predict(rf_model, new_data=data_validation_cla)) %>% 
   accuracy(truth = Delivery_Time, .pred_class)
 ```
 # Model Evaluation
